--- a/Anjali-cakeshop/src/css/Home.css
+++ b/Anjali-cakeshop/src/css/Home.css
@@ -1,8 +1,10 @@
+.home {
+  background-color: rgb(58, 34, 18);
+}
 .home__cakelist {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #c4a484;
   margin: 20px 40px;
   border-radius: 5px;
   overflow: hidden;
