--- a/Anjali-cakeshop/src/App.css
+++ b/Anjali-cakeshop/src/App.css
@@ -1,3 +1,16 @@
 * {
   margin: 0;
 }
+body {
+  /* font-family: "Poppins"; */
+  background-color: #f8f8f9;
+}
+h1 {
+  font-style: italic;
+}
+a {
+  text-decoration: none;
+}
+label {
+  margin: 10px;
+}
