--- a/Anjali-cakeshop/src/css/Cake.css
+++ b/Anjali-cakeshop/src/css/Cake.css
@@ -1,12 +1,15 @@
 .cake {
   text-align: center;
-  border: 1px solid #2b1d0e;
-  margin: 10px;
-  max-width: 15%;
   min-width: 150px;
-  background-color: wheat;
-  border-radius: 10px;
+  border-radius: 5px;
+  overflow: hidden;
   padding: 5px;
+  width: calc(23.5%);
+  background-color: white;
+  transition: all 0.25s ease-in-out 0s;
+  margin-bottom: 1.8%;
+  box-shadow: 0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 100px 80px rgba(0, 0, 0, 0.12);
 }
 .cake__item {
   width: 100%;
