--- a/Anjali-cakeshop/src/css/Home.css
+++ b/Anjali-cakeshop/src/css/Home.css
@@ -1,11 +1,10 @@
 .home {
-  background-color: rgb(58, 34, 18);
+  max-width: 1500px;
+  margin: 0 auto;
 }
 .home__cakelist {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  margin: 20px 40px;
-  border-radius: 5px;
-  overflow: hidden;
+  justify-content: space-around;
+  margin: 20px 0;
 }
