--- a/Anjali-cakeshop/src/css/Cakedetails.css
+++ b/Anjali-cakeshop/src/css/Cakedetails.css
@@ -1,9 +1,87 @@
-.cakedata__img {
-  width: 40%;
+.cakedata {
+  display: flex;
 }
 .cakedata__breadcrumb {
   padding: 10px;
 }
-.cakedata__breadcrumb Link {
-  list-style: none;
+.cakedata__imgContainer {
+  padding: 0 10px 10px;
+}
+.cakedata__zoom {
+  display: flex;
+  justify-content: space-around;
+}
+.cakedata__safety {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+.cakedata__okay {
+  display: flex;
+  color: dimgray;
+  font-weight: 600;
+  font-size: 14px;
+  margin-right: 10px;
+}
+.cakedata__okay p {
+  font-size: 10px;
+  color: green;
+}
+.cakedata__okay > .MuiSvgIcon-root {
+  color: green;
+  margin: 0 3px;
+  font-size: 38px;
+}
+.cakedata__safe {
+  font-size: 14px;
+}
+.cakedata__safe > p {
+  margin-bottom: 5px;
+}
+.cakedata__safe .MuiSvgIcon-root {
+  color: gray;
+  font-size: 22px;
+}
+
+.cakedata__popularity {
+  font-size: 14px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+p {
+  margin-bottom: 0;
+}
+.cakedata__popularity > * {
+  margin-right: 20px;
+}
+.cakedata__priceContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.cakedata__price {
+  color: red;
+  font-weight: 300;
+  font-size: 3.5em;
+}
+.cakedata__price > span {
+  font-weight: 300;
+  font-size: 0.7em;
+}
+.cakedata__offer {
+  font-size: 14px;
+}
+.cakedata__offerBtn {
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 12px;
+  margin-top: 10px;
+}
+.cakedata__offerBtn > .MuiSvgIcon-root {
+  font-size: 16px;
+  margin-right: 5px;
+  margin-bottom: 2px;
 }
