--- a/Anjali-cakeshop/src/css/Cakedetails.css
+++ b/Anjali-cakeshop/src/css/Cakedetails.css
@@ -4,12 +4,6 @@
   }
 }
 
-.MuiFormLabel-root.Mui-focused {
-  color: #2b1d0e;
-}
-.MuiOutlinedInput-notchedOutline {
-  border: none;
-}
 .nav-link {
   width: 100%;
 }
@@ -67,9 +61,32 @@
   color: gray;
   font-size: 22px;
 }
-.cakedata__pincode {
-  background-color: whitesmoke;
+.cakedata__cart {
+  margin: 10px;
+  background-color: #fbebd1;
+  max-width: 400px;
+  padding: 5%;
+  text-align: center;
   border-radius: 10px;
+  border: 2px solid #2b1d0e;
+}
+.cakedata__message {
+  background-color: whitesmoke;
+  border-radius: 5px;
+  padding: 10px;
+  width: 95%;
+  margin-bottom: 3%;
+}
+.cakedata__cart > button {
+  margin-top: 5%;
+  width: 70%;
+  background-color: #2b1d0e;
+  color: white;
+  transition: all 0.1s ease-in-out 0s;
+}
+.cakedata__cart > button:hover {
+  color: white;
+  transform: scale(1.03);
 }
 
 .cakedata__right {
