--- a/Anjali-cakeshop/src/css/Cake.css
+++ b/Anjali-cakeshop/src/css/Cake.css
@@ -6,7 +6,8 @@
   width: calc(23.5%);
   background-color: white;
   transition: all 0.25s ease-in-out 0s;
-  margin: 0.8% 0;
+  margin: 0.8% 0.4%;
+  flex: 1 1 20%;
 }
 .cake__item {
   width: 100%;
