--- a/Anjali-cakeshop/src/css/Cakedetails.css
+++ b/Anjali-cakeshop/src/css/Cakedetails.css
@@ -1,14 +1,28 @@
-@media screen and (max-width: 755px) {
-  .cakedata__right {
-    margin-top: 3%;
-  }
-}
-
 .nav-link {
   width: 100%;
 }
+#myTab > .nav-item > button {
+  height: 100%;
+}
+#myTab > .nav-item {
+  background-color: white;
+  border: 3px solid #2b1d0e;
+}
+#myTab > .nav-item .active {
+  background-color: #fbebd1;
+  font-weight: 700;
+  font-size: large;
+}
 .list-group-item {
   background-color: #fbebd1;
+}
+.tab-pane.fade {
+  transition: all 0.2s;
+  transform: translateY(1rem);
+}
+
+.tab-pane.fade.show {
+  transform: translateY(0rem);
 }
 
 .cakedata {
@@ -30,37 +44,6 @@
   justify-content: space-around;
   font-size: 14px;
 }
-.cakedata__safety {
-  display: flex;
-  align-items: center;
-  margin-top: 15px;
-}
-.cakedata__okay {
-  display: flex;
-  color: dimgray;
-  font-weight: 600;
-  font-size: 14px;
-  margin-right: 10px;
-}
-.cakedata__okay p {
-  font-size: 10px;
-  color: green;
-}
-.cakedata__okay > .MuiSvgIcon-root {
-  color: green;
-  margin: 0 3px;
-  font-size: 38px;
-}
-.cakedata__safe {
-  font-size: 14px;
-}
-.cakedata__safe > p {
-  margin-bottom: 5px;
-}
-.cakedata__safe .MuiSvgIcon-root {
-  color: gray;
-  font-size: 22px;
-}
 .cakedata__cart {
   margin: 10px;
   background-color: #fbebd1;
@@ -77,6 +60,12 @@
   width: 95%;
   margin-bottom: 3%;
 }
+.cakedata__date {
+  width: 90%;
+}
+.cakedata__date input {
+  margin-top: 10px !important;
+}
 .cakedata__cart > button {
   margin-top: 5%;
   width: 70%;
@@ -92,11 +81,17 @@
 .cakedata__right {
   flex: 1;
   margin-left: 5%;
+  margin-top: 3.5%;
+}
+.cakedata__header {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
 }
 .cakedata__popularity {
   font-size: 14px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -105,6 +100,12 @@ p {
 }
 .cakedata__popularity > * {
   margin-right: 20px;
+  color: #2b1d0e;
+  font-weight: 700;
+}
+.cakedata__popularity > p {
+  padding-top: 5px;
+  font-size: 16px;
 }
 .cakedata__priceContainer {
   display: flex;
@@ -138,6 +139,9 @@ p {
   margin-right: 5px;
   margin-bottom: 2px;
 }
+#myTabContent {
+  box-sizing: unset;
+}
 .cake__description {
   margin-top: 0.5%;
   background-color: #2b1d0e;
@@ -165,4 +169,37 @@ p {
 
 .cakedata__about > p {
   min-width: 190px;
+}
+.cakedata__safety {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.cakedata__okay {
+  display: flex;
+  min-width: fit-content;
+  color: dimgray;
+  font-weight: 600;
+  font-size: 14px;
+  min-width: 25ch;
+}
+.cakedata__okay p {
+  font-size: 10px;
+  color: green;
+}
+.cakedata__okay > .MuiSvgIcon-root {
+  color: green;
+  margin: 0 3px;
+  font-size: 38px;
+}
+.cakedata__safe {
+  font-size: 14px;
+  display: flex;
+  padding: 0 10px 5px;
+}
+.cakedata__safe .MuiSvgIcon-root {
+  color: rgba(34, 102, 17, 0.835);
+  font-size: 22px;
 }
