--- a/Anjali-cakeshop/src/App.css
+++ b/Anjali-cakeshop/src/App.css
@@ -2,7 +2,7 @@
   margin: 0;
 }
 body {
-  background-color: #c4a584;
+  background-color: #f8e3d5;
 }
 h1 {
   font-style: italic;
@@ -18,7 +18,7 @@ label {
   position: relative;
 }
 .footer {
-  color: #2b1d0e;
+  color: #86623b;
   width: 100%;
   text-align: center;
   padding: 10px;
