--- a/Anjali-cakeshop/src/css/Cakedetails.css
+++ b/Anjali-cakeshop/src/css/Cakedetails.css
@@ -6,15 +6,15 @@
 }
 #myTab > .nav-item {
   background-color: white;
-  border: 3px solid #86623b;
+  border: 2px solid #86623b;
 }
 #myTab > .nav-item .active {
-  background-color: #edaf87;
+  background-color: white;
   font-weight: 700;
   font-size: large;
 }
 .list-group-item {
-  background-color: #edaf87;
+  background-color: white;
 }
 .tab-pane.fade {
   transition: all 0.2s;
@@ -53,7 +53,7 @@
 }
 .cakedata__cart {
   margin: 10px;
-  background-color: #edaf87;
+  background-color: white;
   max-width: 400px;
   padding: 5%;
   text-align: center;
@@ -77,9 +77,9 @@
 .cakedata__cart > button {
   margin: 5% 2% 0;
   width: 70%;
-  background-color: #86623b;
-  color: white;
+  background-color: #edaf87;
   transition: all 0.1s ease-in-out 0s;
+  font-weight: 700;
 }
 .cakedata__cart > button:hover {
   color: white;
@@ -169,7 +169,7 @@ p {
 }
 .cakedata__details,
 .cakedata__about {
-  background-color: #edaf87;
+  background-color: white;
   /* margin: 0 0.5%; */
   padding: 10px;
 }
@@ -183,8 +183,7 @@ p {
   margin-top: 15px;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  color: #07461f;
-  background-color: #e0c09c;
+  color: #86623b;
 }
 .cakedata__okay {
   display: flex;
