--- a/Anjali-cakeshop/src/css/Cake.css
+++ b/Anjali-cakeshop/src/css/Cake.css
@@ -3,7 +3,8 @@
   border-radius: 5px;
   overflow: hidden;
   padding: 5px;
-  width: calc(23.5%);
+  /* width: 24.5%; */
+  max-width: 24.5%;
   background-color: white;
   transition: all 0.25s ease-in-out 0s;
   margin: 0.8% 0.4%;
