Cart partial styling

--- a/Anjali-cakeshop/src/App.css
+++ b/Anjali-cakeshop/src/App.css
@@ -22,7 +22,7 @@ label {
   width: 100%;
   text-align: center;
   padding: 10px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
   background-color: transparent;
   font-size: large;
   font-weight: bold;
