--- a/Anjali-cakeshop/src/css/Cart.css
+++ b/Anjali-cakeshop/src/css/Cart.css
@@ -1,16 +1,7 @@
-/* .error-container {
-  display: flex;
-  align-items: center;
-}
-#ErrorToHome {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-} */
 .cart__container {
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 0 2rem;
   max-width: 1500px;
   margin: 0 auto;
 }
